# SurfRemesh

./: AABB.h  CMakeLists.txt  Geom.h  SRemesh.cxx  SphericalHarmonics.h  SurfaceRemeshing.cpp  SurfaceRemeshing.h  main.cpp
Mesh/: Mesh.cpp  Mesh.h  MeshIO.cpp  MeshIO.h  ObjIO.cpp  ObjIO.h  VtkIO.cpp  VtkIO.h
src/: SurfaceRemeshing.cpp  SurfaceRemeshing.h
wrapper/: SRemesh.xml  main.cpp
